--- a/src/server/delivery-group-standards/views/index.njk
+++ b/src/server/delivery-group-standards/views/index.njk
@@ -20,9 +20,9 @@
 
       <ol class="govuk-list govuk-!-margin-top-6">
         <li class="govuk-!-margin-bottom-4" style="border-top: 1px solid #b1b4b6; padding-top: 15px;">
-          <h2 class="govuk-heading-m" >
-            1. Define and circulate outcomes
-          </h2>
+        <h2 class="govuk-heading-m" >
+          1. Define and share outcomes
+        </h2>
           <p class="govuk-body">
             <a href="/delivery-group-standards/1" class="govuk-link govuk-link--no-visited-state">
               Read more about point 1
