--- a/src/server/delivery-group-standards/views/standard-4.njk
+++ b/src/server/delivery-group-standards/views/standard-4.njk
@@ -108,10 +108,6 @@
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
             <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
-            <a class="gem-c-contents-list__link govuk-link" href="#what-you-should-show">What you should be able to show</a>
-          </li>
-          <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-            <span class="gem-c-contents-list__list-item-dash" aria-hidden="true"></span>
             <a class="gem-c-contents-list__link govuk-link" href="#how-it-is-measured">How it is measured</a>
           </li>
           <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
@@ -125,33 +121,8 @@
       <h2 class="govuk-heading-l" id="why-its-important">Why it's important</h2>
       
       <p class="govuk-body">
-        Delivery groups that measure and share progress build trust with stakeholders, 
-        learn faster from what works, and can course-correct before small problems become 
-        big failures. Regular measurement creates accountability and helps teams celebrate 
-        genuine achievements.
+        Delivery groups that measure and share progress build trust with stakeholders, learn faster from what works, and can course-correct before small problems become big failures. Regular measurement creates accountability and helps teams celebrate genuine achievements. Without measurement, delivery groups can't demonstrate their value, miss opportunities to improve, and lose stakeholder support.
       </p>
-
-      <p class="govuk-body">
-        Without measurement, delivery groups can't demonstrate their value, miss opportunities 
-        to improve, and lose stakeholder support. Teams work in the dark, unable to tell 
-        if their efforts are making a difference or if they need to change direction.
-      </p>
-
-      <h2 class="govuk-heading-l" id="what-you-should-show">What you should be able to show</h2>
-      
-      <p class="govuk-body">
-        To demonstrate that your delivery group meets this standard, you should be able to:
-      </p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>Define 3-5 key success indicators that directly relate to your outcomes, with baseline data and realistic targets</li>
-        <li>Show regular measurement and reporting of progress against these indicators</li>
-        <li>Demonstrate reliable data collection processes and systems with documented methodology</li>
-        <li>Provide evidence that measurement data actively informs decisions and priorities</li>
-        <li>Show regular review cycles with stakeholders to assess progress and adjust course</li>
-        <li>Present clear examples of impact and value delivered to users and the organisation</li>
-        <li>Demonstrate how you've improved performance based on measurement insights</li>
-      </ul>
 
       <h2 class="govuk-heading-l" id="how-it-is-measured">How it is measured</h2>
       
@@ -168,17 +139,17 @@
           Comprehensive measurement system with regular review and data-driven decisions
         </h3>
         <p class="govuk-body">
-          Delivery group has established clear success indicators with baseline data and targets. 
-          Regular measurement and reporting processes are in place. Progress data is actively 
-          used to guide decisions and demonstrate impact to stakeholders.
+          Delivery group has established clear success indicators with baseline data and targets. Regular measurement and reporting processes are in place. Progress data is actively used to guide decisions and demonstrate impact to stakeholders.
         </p>
-        <h4 class="govuk-heading-s">Evidence you might provide:</h4>
+        <h4 class="govuk-heading-s">Evidence you should be able to show:</h4>
         <ul class="govuk-list govuk-list--bullet">
-          <li>Dashboard or regular reports showing progress against success indicators</li>
-          <li>Baseline data and target setting documentation</li>
-          <li>Meeting minutes or decision records showing how data influenced priorities</li>
-          <li>Evidence of regular review cycles with stakeholders</li>
-          <li>Documentation of measurement methodology and data sources</li>
+          <li>Define 3-5 key success indicators that directly relate to your outcomes, with baseline data and realistic targets</li>
+          <li>Show regular measurement and reporting of progress against these indicators</li>
+          <li>Demonstrate reliable data collection processes and systems with documented methodology</li>
+          <li>Provide evidence that measurement data actively informs decisions and priorities</li>
+          <li>Show regular review cycles with stakeholders to assess progress and adjust course</li>
+          <li>Present clear examples of impact and value delivered to users and the organisation</li>
+          <li>Demonstrate how you've improved performance based on measurement insights</li>
         </ul>
       </div>
 
@@ -231,7 +202,7 @@
 
       <h2 class="govuk-heading-l" id="delivery-group-standards">Delivery group standards</h2>
       <ol class="govuk-list govuk-list--number">
-        <li><a href="/delivery-group-standards/1" class="govuk-link">Define and circulate outcomes</a></li>
+        <li><a href="/delivery-group-standards/1" class="govuk-link">Define and share outcomes</a></li>
         <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
         <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a plan for change</a></li>
         <li><strong>Define success measures and share progress</strong></li>
