--- a/src/server/delivery-group-standards/views/index.njk
+++ b/src/server/delivery-group-standards/views/index.njk
@@ -41,7 +41,7 @@
         </li>
         <li class="govuk-!-margin-bottom-4" style="border-top: 1px solid #b1b4b6; padding-top: 15px;">
           <h2 class="govuk-heading-m">
-            3. Publish a plan for change
+            3. Publish a roadmap for change
           </h2>
           <p class="govuk-body">
             <a href="/delivery-group-standards/3" class="govuk-link govuk-link--no-visited-state">
