--- a/src/server/delivery-group-standards/views/standard-2.njk
+++ b/src/server/delivery-group-standards/views/standard-2.njk
@@ -202,7 +202,7 @@
       <ol class="govuk-list govuk-list--number">
         <li><a href="/delivery-group-standards/1" class="govuk-link">Define and share outcomes</a></li>
         <li><strong>Maintain an inventory of products and services</strong></li>
-        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a plan for change</a></li>
+        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a roadmap for change</a></li>
         <li><a href="/delivery-group-standards/4" class="govuk-link">Define success measures and share progress</a></li>
       </ol>
     </div>
