--- a/src/server/delivery-group-standards/views/standard-4.njk
+++ b/src/server/delivery-group-standards/views/standard-4.njk
@@ -204,7 +204,7 @@
       <ol class="govuk-list govuk-list--number">
         <li><a href="/delivery-group-standards/1" class="govuk-link">Define and share outcomes</a></li>
         <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
-        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a plan for change</a></li>
+        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a roadmap for change</a></li>
         <li><strong>Define success measures and share progress</strong></li>
       </ol>
     </div>
