--- a/src/server/delivery-group-standards/views/standard-1.njk
+++ b/src/server/delivery-group-standards/views/standard-1.njk
@@ -201,7 +201,7 @@
       <ol class="govuk-list govuk-list--number">
         <li><strong>Define and share outcomes</strong></li>
         <li><a href="/delivery-group-standards/2" class="govuk-link">Maintain an inventory of products and services</a></li>
-        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a plan for change</a></li>
+        <li><a href="/delivery-group-standards/3" class="govuk-link">Publish a roadmap for change</a></li>
         <li><a href="/delivery-group-standards/4" class="govuk-link">Define success measures and share progress</a></li>
       </ol>
     </div>
